Squashed commit of the following:
    - Task scheduler implementation.
    - Code cleanup.
    - Test case updates.
    - Discovery model updates.
    - Logging tweaks.
    - Native image.